--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <input type="email" name="email" id="email" placeholder="Email" required>
                 <input type="password" name="pass" id="pass" placeholder="Password" required>
                 <input type="number" name="num" id="num" placeholder="Number" required>
-                <textarea name="message" id="message" placeholder="Message"></textarea>
+                <textarea name="message" id="message" placeholder="Message" required></textarea>
                 <span id="sumittion">
                     <button id="submit" type="submit">Submit</button>
                     <button type="reset" id="cancel">Cancel</button>
